Increased padding in sections to make sure navbar navigation doesn't scroll page to where headers are cut off.

--- a/css/styles.css
+++ b/css/styles.css
@@ -171,7 +171,7 @@ footer:nth-child(odd) {
 }
 
 .cover-inner {
-  padding: 3rem 1rem;
+  padding: 5rem 1rem;
   width: 100%;
 }
 
